--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,10 +12,14 @@ jobs:
     name: rustfmt
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Check formatting
-        run: cargo +nightly fmt --all -- --check
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with: # use nightly rustfmt rules
+          toolchain: nightly
+          override: true
+          profile: minimal
+          components: rustfmt
+      - run: cargo fmt --all -- --check
   test:
     name: test
     env:
@@ -23,17 +27,13 @@ jobs:
       RUST_BACKTRACE: 1
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Run Tests
-        run: cargo test --verbose --all
+      - uses: actions/checkout@v2
+      - run: cargo test --verbose --all
   examples:
     name: examples
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      # No terminal available in CI, only check the examples.
+      - uses: actions/checkout@v2
       - name: httpbin post
         run: cargo run -- record ./test_data post
   lint:
@@ -47,7 +47,4 @@ jobs:
           override: true
           profile: minimal
           components: clippy
-      - uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: --all
+      - run: cargo clippy --all
